# prism_v2_playground

./: Dockerfile  README.md  docker-compose.yaml  requirements.dev.txt  requirements.txt  run_agents.sh  setup.py
openapi-generator/prism-agent-open-api-specification-client/: README.md  pyproject.toml
openapi-generator/prism-agent-open-api-specification-client/prism_agent_open_api_specification_client/: __init__.py  client.py
openapi-generator/prism-agent-open-api-specification-client/prism_agent_open_api_specification_client/models/: __init__.py  accept_connection_invitation_request.py  accept_credential_offer_request.py  authentication_challenge_submission_request.py  authentication_challenge_submission_response.py  bad_request.py  connection.py  connection_all_of.py  connection_all_of_role.py  connection_all_of_state.py  connection_collection.py  connection_invitation.py  connections_page.py  connections_page_all_of.py  create_authentication_challenge_request.py  create_authentication_challenge_response.py  create_connection_request.py  create_issue_credential_record_request.py  create_issue_credential_record_request_all_of.py  create_issue_credential_record_request_claims.py  create_managed_did_request.py  create_managed_did_request_document_template.py  create_managed_did_request_document_template_public_keys_inner.py  create_managed_did_request_document_template_public_keys_inner_purpose.py  create_managed_did_response.py  credential_schema_input.py  credential_schema_input_schema.py  credential_schema_response.py  credential_schema_response_page.py  did.py  (+65 more)
(+153 files in other folders)
